# sunny

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md
.sunny/: task_ledger.sqlite
apps/sunny-cli/: Cargo.toml
apps/sunny-cli/src/: main.rs
apps/sunny-cli/src/commands/: chat.rs  login.rs  mod.rs  task_events.rs  tasks.rs  work.rs
apps/sunny-gui/: Cargo.toml
apps/sunny-gui/src/: app.rs  approval.rs  bridge.rs  main.rs  sessions.rs  theme.rs
apps/sunny-gui/src/widgets/: approval_dialog.rs  message.rs  mod.rs  session_list.rs  status_bar.rs  thread_view.rs  tool_call.rs
apps/sunny-tui/: Cargo.toml
apps/sunny-tui/src/: agent.rs  app.rs  bridge.rs  interview_presenter.rs  main.rs  thread.rs
apps/sunny-tui/src/ui/: approval.rs  command_palette.rs  dispatch_console.rs  focus.rs  interview_card.rs  layout.rs  margin.rs  markdown_table.rs  mod.rs  session_manager.rs  status_bar.rs  theme.rs  thread_view.rs  tool_call.rs
crates/sunny-boys/: Cargo.toml
crates/sunny-boys/examples/: smoke_session.rs
crates/sunny-boys/src/: analyze.rs  background.rs  codebase.rs  critique.rs  delegate.rs  events.rs  explore.rs  git_tools.rs  lib.rs  oracle.rs  registry.rs  review.rs  streaming_tool_loop.rs  tavily.rs  timeouts.rs  tool_loop.rs
crates/sunny-boys/src/agent/: approval.rs  executor.rs  interview.rs  mod.rs  provider_registry.rs  session.rs  tools.rs
crates/sunny-boys/src/agent/tools/: definitions.rs  executor.rs  helpers.rs  mod.rs  task_handlers.rs
crates/sunny-boys/tests/: agent_integration.rs  integration_registry.rs  provider_routing_integration.rs  toolset_integration.rs
crates/sunny-cli/: Cargo.toml
crates/sunny-cli/.sunny/: task_ledger.sqlite
crates/sunny-cli/src/: lib.rs  main.rs  output.rs
crates/sunny-cli/src/chat/: mod.rs  session.rs  tools.rs
crates/sunny-cli/src/commands/: analyze.rs  ask.rs  chat.rs  intake_advisor.rs  login.rs  mod.rs  prompt.rs
crates/sunny-cli/tests/: ask_integration.rs  ask_regression.rs  ask_runtime_baseline.rs  baseline_lock.rs  chat_integration.rs  e2e_ask.rs  intake_advisory_integration.rs  intake_integration.rs  integration.rs  live_llm_matrix.rs  prompt_integration.rs
crates/sunny-core/: Cargo.toml
crates/sunny-core/src/: events.rs  lib.rs  timeouts.rs
crates/sunny-core/src/agent/: echo.rs  error.rs  handle.rs  metadata.rs  mod.rs
crates/sunny-core/src/orchestrator/: classifier.rs  completion_gate.rs  context.rs  error.rs  events.rs  executor.rs  extensions.rs  handle.rs  intake.rs  intent.rs  interactive.rs  mod.rs  plan.rs  planner.rs  prompt_spec.rs  registry.rs  routing.rs  supervision.rs  telemetry.rs
crates/sunny-core/src/tool/: error.rs  file_snapshot.rs  fs_edit.rs  fs_glob.rs  fs_read.rs  fs_scan.rs  fs_write.rs  grep_files.rs  interview.rs  mod.rs  path_guard.rs  policy.rs  registry.rs  shell_exec.rs  text_grep.rs  tools.rs
crates/sunny-core/src/tool/lsp/: client.rs  jsonrpc.rs  mod.rs  tools.rs  transport.rs
crates/sunny-core/tests/: event_chain.rs  integration.rs  planner_integration.rs  tracing_integration.rs
crates/sunny-mind/: Cargo.toml
crates/sunny-mind/examples/: smoke_hey.rs
crates/sunny-mind/src/: error.rs  kimi.rs  lib.rs  mock_provider.rs  ollama.rs  provider.rs  stream.rs  tokenizer.rs  types.rs
crates/sunny-mind/src/anthropic/: credentials.rs  mod.rs  oauth.rs  provider.rs  stream_parser.rs
crates/sunny-mind/src/openai/: credentials.rs  mod.rs  oauth.rs  provider.rs  stream_parser.rs
crates/sunny-mind/tests/: contract_tests.rs
crates/sunny-plans/: Cargo.toml
crates/sunny-plans/src/: category.rs  deviation.rs  error.rs  events.rs  handoff.rs  lib.rs  model.rs  orchestrator.rs  planner_agent.rs  replan.rs  schema.rs  store.rs
crates/sunny-plans/src/tools/: definitions.rs  handlers.rs  mod.rs
crates/sunny-plans/tests/: mode_switching.rs  plan_lifecycle.rs  replan.rs
crates/sunny-store/: Cargo.toml
crates/sunny-store/src/: context_file.rs  db.rs  error.rs  index.rs  lib.rs  session.rs  token_budget.rs
crates/sunny-tasks/: Cargo.toml
crates/sunny-tasks/src/: capability_store.rs  config.rs  error.rs  lib.rs  model.rs  policy.rs  scheduler.rs  session.rs  store.rs  system_prompt.rs  verifier.rs  worker.rs  workspace.rs
crates/sunny-tasks/tests/: suspend_requeue_lifecycle.rs
docs/adr/: 2026-03-11-intake-planner-orchestrator.md
src/: credentials.rs  main.rs  provider.rs
src/openai/: mod.rs  oauth.rs  provider.rs
