[package]
name = "sunny"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
rand = { version = "0.10.1", features = ["thread_rng"] }
base64 = "0.22.1"
sha2 = "0.11.0"
open = "5.3.4"

tokio = { version = "1.52.1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tiny_http = "0.12.0"
futures = "0.3.32"
reqwest = { version = "0.12.28", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

tkach = { git = "https://github.com/kuchmenko/tkach", branch = "wt/linux/issue-30-thinking-events" }
keyring = { version = "3.6.3", features = ["sync-secret-service", "crypto-rust"] }
