[package]
name = "sunny-cli"
version.workspace = true
edition.workspace = true

[dependencies]
sunny-core = { path = "../../crates/sunny-core" } # dep: tool infrastructure for chat
sunny-mind = { path = "../../crates/sunny-mind" } # dep: LLM provider for analysis enrichment
sunny-boys = { path = "../../crates/sunny-boys" } # dep: streaming tool loop and git tools for chat
sunny-store = { path = "../../crates/sunny-store" } # dep: session and symbol persistence
clap = { version = "4", features = ["derive"] } # dep: CLI argument parsing
tokio = { version = "1", features = ["full"] } # dep: async runtime for CLI
tokio-util = { version = "0.7", features = ["full"] } # dep: CancellationToken for graceful shutdown
serde = { version = "1", features = ["derive"] } # dep: serialization for JSON output
serde_json = "1" # dep: JSON output formatting
tracing = "0.1" # dep: structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # dep: logging output for CLI with env filtering
dotenvy = "0.15" # dep: load .env variables for provider configuration
thiserror = "1" # dep: error handling for CLI commands
anyhow = "1" # dep: error propagation in CLI command handlers
reqwest = { version = "0.12", features = ["json"] } # dep: HTTP client for OAuth token exchange in login command
async-trait = "0.1" # dep: async methods in LlmProvider test mocks (session.rs)
rustyline = { version = "14", features = [] } # dep: REPL input with history and line editing
crossterm = "0.27" # dep: terminal color output for tool indicators
termimad = "0.30" # dep: terminal markdown rendering for LLM responses
dirs = "5" # dep: locate home directory for OAuth credential file path
uuid = { version = "1", features = ["v4"] } # dep: UUID v4 session IDs

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] } # dep: async test runtime
tokio-stream = "0.1" # dep: stream utilities for mock providers in tests
tempfile = "3" # dep: isolated fixture directories for integration tests
