[package]
name = "sunny-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sunny-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.33"         # dep: egui desktop runtime
egui = "0.33"           # dep: immediate-mode GUI framework
egui_commonmark = "0.22"  # dep: markdown rendering in thread messages
tokio = { version = "1", features = ["full"] }  # dep: async runtime for agent bridge
tokio-util = "0.7"  # dep: CancellationToken
sunny-mind = { path = "../../crates/sunny-mind" }   # dep: LLM types (ChatMessage, StreamEvent)
sunny-boys = { path = "../../crates/sunny-boys" }   # dep: AgentSession, tool loop
sunny-store = { path = "../../crates/sunny-store" } # dep: session persistence
sunny-core = { path = "../../crates/sunny-core" }   # dep: tool types, policies
serde = { version = "1", features = ["derive"] }    # dep: serialization
serde_json = "1"                                    # dep: JSON handling
tracing = "0.1"                                     # dep: structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # dep: log output
dotenvy = "0.15"                                    # dep: load .env for API keys
clap = { version = "4", features = ["derive"] }     # dep: CLI args (--workspace)
anyhow = "1"                                        # dep: application error handling
chrono = { version = "0.4", features = ["clock"] }  # dep: timestamps for messages
uuid = { version = "1", features = ["v4"] }         # dep: UUID generation for sessions
async-trait = "0.1"                                # dep: async methods in HumanApprovalGate impl

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }  # dep: async test runtime
