[package]
name = "sunny-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sunny-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm", "unstable-rendered-line-info"] }
ratatui-core = "0.1"                               # dep: map tui-markdown style types into ratatui styles
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
tui-markdown = "0.3"
tokio = { version = "1", features = ["full"] }   # dep: async runtime
tokio-stream = "0.1"                              # dep: EventStream adapter
sunny-mind = { path = "../../crates/sunny-mind" }   # dep: LLM types, StreamEvent
sunny-boys = { path = "../../crates/sunny-boys" }   # dep: AgentSession, tool loop
sunny-plans = { path = "../../crates/sunny-plans" } # dep: PlanMode for mode switching
sunny-store = { path = "../../crates/sunny-store" } # dep: session persistence
sunny-core = { path = "../../crates/sunny-core" }   # dep: tool types
anyhow = "1"                                        # dep: application error handling
tracing = "0.1"                                     # dep: structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # dep: log output
tracing-appender = "0.2"                                             # dep: non-blocking file log (keeps logs off TUI terminal)
dirs = "5"                                                            # dep: locate ~/.local/share for log file path
dotenvy = "0.15"                                    # dep: load .env for API keys
clap = { version = "4", features = ["derive"] }     # dep: CLI args
uuid = { version = "1", features = ["v4"] }         # dep: UUID generation
chrono = { version = "0.4", features = ["clock"] }  # dep: timestamps
async-trait = "0.1"                                 # dep: async trait impls
pulldown-cmark = "0.11"                             # dep: markdown table extraction
serde_json = "1"                                    # dep: tool argument parsing in previews
tokio-util = "0.7"                                  # dep: CancellationToken

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
