[package]
name = "sunny-boys"
version.workspace = true
edition.workspace = true

[dependencies]
sunny-core = { path = "../sunny-core" } # dep: agent traits and orchestrator types
sunny-mind = { path = "../sunny-mind" } # dep: LLM provider abstraction for analysis
async-trait = "0.1" # dep: async methods in Agent trait per AGENTS.md
thiserror = "1" # dep: typed error enums per AGENTS.md
tracing = "0.1" # dep: structured logging, no println per AGENTS.md
serde = { version = "1", features = ["derive"] } # dep: serialization for AnalysisResult
serde_json = "1" # dep: JSON serialization for agent responses
tokio = { version = "1", features = ["full"] } # dep: async runtime for agent execution
tokio-util = { version = "0.7", features = ["full"] } # dep: CancellationToken for graceful shutdown

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] } # dep: async test runtime
tracing-subscriber = "0.3" # dep: logging subscriber for test output