[package]
name = "sunny-boys"
version.workspace = true
edition.workspace = true

[dependencies]
sunny-core = { path = "../sunny-core" } # dep: tool infrastructure for chat
sunny-mind = { path = "../sunny-mind" } # dep: LLM provider for streaming tool loop
sunny-store = { path = "../sunny-store" } # dep: session persistence and symbol index for agent
sunny-tasks = { path = "../sunny-tasks" } # dep: task management tools for agent sessions
sunny-plans = { path = "../../crates/sunny-plans" } # dep: plan tools, PlanStore, orchestrator
async-trait = "0.1" # dep: async methods in tool loop test mocks
thiserror = "1" # dep: typed error enums per AGENTS.md
tracing = "0.1" # dep: structured logging, no println per AGENTS.md
serde = { version = "1", features = ["derive"] } # dep: serialization for AnalysisResult
serde_json = "1" # dep: JSON serialization for agent responses
tokio = { version = "1", features = ["full"] } # dep: async runtime for agent execution
tokio-util = { version = "0.7", features = ["full"] } # dep: CancellationToken for graceful shutdown
tokio-stream = "0.1" # dep: iter adapter for building mock streams in tests and consuming StreamResult
inquire = "0.7" # dep: CLI interactive prompts for approval gate and interview tool
uuid = { version = "1", features = ["v4"] } # dep: task executor session ids

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] } # dep: async test runtime
tracing-subscriber = "0.3" # dep: logging subscriber for test output
tempfile = "3" # dep: temporary directories for git tool tests
