[package]
name = "sunny-cli"
version.workspace = true
edition.workspace = true

[dependencies]
sunny-core = { path = "../sunny-core" } # dep: agent system and orchestrator for CLI commands
sunny-mind = { path = "../sunny-mind" } # dep: LLM provider for analysis enrichment
sunny-boys = { path = "../sunny-boys" } # dep: reusable agents like AnalyzeAgent
clap = { version = "4", features = ["derive"] } # dep: CLI argument parsing
tokio = { version = "1", features = ["full"] } # dep: async runtime for CLI
tokio-util = { version = "0.7", features = ["full"] } # dep: CancellationToken for graceful shutdown
serde = { version = "1", features = ["derive"] } # dep: serialization for JSON output
serde_json = "1" # dep: JSON output formatting
tracing = "0.1" # dep: structured logging
tracing-subscriber = "0.3" # dep: logging output for CLI
dotenvy = "0.15" # dep: load .env variables for provider configuration

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] } # dep: async test runtime
async-trait = "0.1" # dep: impl LlmProvider for mock in integration tests
tempfile = "3" # dep: isolated fixture directories for integration tests
