[package]
name = "sunny-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] } # dep: async runtime, core foundation
async-trait = "0.1" # dep: async methods in tool traits per AGENTS.md
thiserror = "1" # dep: typed error enums per AGENTS.md
tracing = "0.1" # dep: structured logging, no println per AGENTS.md
walkdir = "2" # dep: recursive directory traversal for filesystem tools
ignore = "0.4" # dep: .gitignore-aware filesystem scanning
regex = "1" # dep: regex support for text_grep LLM-driven code search

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] } # dep: test utilities for async tests
tracing-subscriber = "0.3" # dep: logging subscriber for test output
tempfile = "3" # dep: temporary files/dirs for filesystem tool tests
tracing-test = { version = "0.2", features = ["no-env-filter"] } # dep: traced_test macro and logs_contain for tool inline tests
