[package]
name = "sunny-core"
version.workspace = true
edition.workspace = true

[dependencies]
sunny-mind = { path = "../sunny-mind" } # dep: ToolDefinition schema types used by Tool registry and concrete tool wrappers
tokio = { version = "1", features = ["full"] } # dep: async runtime, core foundation
async-trait = "0.1" # dep: async methods in tool traits per AGENTS.md
thiserror = "1" # dep: typed error enums per AGENTS.md
tracing = "0.1" # dep: structured logging, no println per AGENTS.md
walkdir = "2" # dep: recursive directory traversal for filesystem tools
ignore = "0.4" # dep: .gitignore-aware filesystem scanning
grep = "0.3" # dep: ripgrep as library — parallel search, context lines, file type filtering
grep-regex = "0.1" # dep: direct RegexMatcher access for grep_files implementation
grep-searcher = "0.1" # dep: direct Searcher and Sink access for grep_files implementation
globset = "0.4" # dep: glob pattern matching for fs_glob tool
regex = "1" # dep: regex support for text_grep LLM-driven code search
dashmap = "6" # dep: concurrent hashmap for FileSnapshotStore
serde = { version = "1", features = ["derive"] } # dep: serialization for interview tool data structures
serde_json = "1" # dep: JSON serialization for interview context
lsp-types = "0.97" # dep: LSP protocol request/notification traits and types
url = "2" # dep: root URI conversion for LSP initialize handshake

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] } # dep: test utilities for async tests
tracing-subscriber = "0.3" # dep: logging subscriber for test output
tempfile = "3" # dep: temporary files/dirs for filesystem tool tests
tracing-test = { version = "0.2", features = ["no-env-filter"] } # dep: traced_test macro and logs_contain for tool inline tests
