[package]
name = "sunny-plans"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] } # dep: SQLite plan persistence with bundled SQLite binary
uuid = { version = "1", features = ["v4"] } # dep: UUID v4 IDs for plans, decisions, constraints, goals
chrono = { version = "0.4", features = ["serde"] } # dep: timestamps with RFC3339 serialization
serde = { version = "1", features = ["derive"] } # dep: serialization for plan domain models
serde_json = "1" # dep: JSON encoding for metadata and flexible fields
thiserror = "1" # dep: typed plan error enums per AGENTS.md
sunny-mind = { path = "../sunny-mind" } # dep: ToolDefinition type for plan tool schemas
sunny-store = { path = "../sunny-store" } # dep: shared SQLite Database and StoreError types
sunny-tasks = { path = "../sunny-tasks" } # dep: Task types for plan-task relationships

[dev-dependencies]
tempfile = "3" # dep: temporary directories for unit tests
