[package]
name = "sunny-tasks"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] } # dep: SQLite task persistence with bundled SQLite binary
uuid = { version = "1", features = ["v4"] } # dep: UUID v4 IDs for tasks and questions
chrono = { version = "0.4", features = ["serde"] } # dep: timestamps with RFC3339 serialization
serde = { version = "1", features = ["derive"] } # dep: serialization for task domain models
serde_json = "1" # dep: JSON encoding for metadata, result files, and options
thiserror = "1" # dep: typed task error enums per AGENTS.md
tracing = "0.1" # dep: structured logging, no println per AGENTS.md
dirs = "5" # dep: home directory resolution via sunny-store Database::open_default
sunny-store = { path = "../sunny-store" } # dep: shared SQLite Database and StoreError types
tokio = { version = "1", features = ["process", "time", "rt", "rt-multi-thread", "macros", "sync"] } # dep: async process execution in verifier, select! macro and block_in_place for scheduler
tokio-util = { version = "0.7", features = ["full"] } # dep: CancellationToken for scheduler loop lifecycle
toml = "1" # dep: policy.toml serialization

[dev-dependencies]
tempfile = "3" # dep: temporary directories for unit tests
tokio = { version = "1", features = ["rt", "macros", "process"] } # dep: async verifier tests
